# monana

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.typ  config_symlink_by_location_time.yaml  monana.yaml  test_config.yaml
.github/: copilot-instructions.md  renovate.json
modules/: package.nix  treefmt.nix
src/: lib.rs  main.rs
src/actions/: mod.rs
src/config/: mod.rs
src/metadata/: context.rs  extractor.rs  location.rs  location_history.rs  mod.rs
src/pipeline/: mod.rs
src/template/: mod.rs
test_data/: location_history.json  malformed.json
