[package]
name = "monana"
version = "0.1.0"
edition = "2024"
description = "Media Organization, Normalization, and Archival via Named Automation"

[dependencies]
anyhow = "1.0.98"
camino = { version = "1.1.10", features = ["serde1"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
image = "0.25.6"
md5 = "0.8.0"
nom-exif = "2.5.4"
notify = "8.2.0"
reverse_geocoder = "4.1.1"
rhai = "1.22.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tree_magic_mini = "3.1.6"
walkdir = "2.5.0"
